
2017-11-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c: increase size for DEBUG-CONTENT according to file record length

2017-11-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_call): change to exception handling: only check for
	  exceptions that are the result of the current CALL

2017-11-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c, typeck.c: add DEBUG-ITEM to be handled as register
	* typeck.c: change definition of DEBUG-ITEM: DEBUG-LINE is alphanumeric,
	  DEBUG-NAME and DEBUG-CONTENT X(31) -> X(30)

2017-11-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c: change to USE FOR DEBUGGING procedures - don't generate a
	  local cob_debugging_mode and use runtime setting instead

2017-11-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: only switch CALL ... BY VALUE to BY CONTENT for a single
	  parameter and output its name
	* warning.def, cobc.h: allow -Wno-other to suppress messages generated
	  because of "COBC_WARN_FILLER"
	* warning.def, error.c, typeck.c: allow -Wno-dialect to suppress messages
	  generated because of dialect option value "warning"
	* cobc.c: default cb_flag_computed_goto depending on COB_COMPUTED_GOTO
	  instead of a fixed list of compiler (version) defines
	* flag.def, cobc.c, codegen.c: disabled -fif-cutoff (cb_if_cutoff,
	  gen_if_level), can be re-activated by -DCOBC_HAS_CUTOFF_FLAG (likely
	  to be removed completely later), see bug #456

2017-11-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l: fixed bug #458 by adding error handling for copybooks
	  that couldn't be opened because of external limits

2017-11-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c: check missing evaluation of command line option;
	  code-coverage specific changes

2017-10-25  Ron Norman <rjn@inglenet.com>

	* typeck.c (validate_move invalid:) fixed bug #225 report