@@ -828,9 +828,10 @@ validate_occurs (const struct cb_field * const f)
 		return;
 	}
 
-	if (!cb_verify (cb_top_level_occurs_clause, "01/77 OCCURS") &&
-	    (f->level == 01 || f->level == 77)) {
-		level_redundant_error (x, "OCCURS");
+	if ((f->level == 01 || f->level == 77)
+	 && !cb_verify_x (x, cb_top_level_occurs_clause, "01/77 OCCURS")) {
+		cb_error_x (x, _("level %02d item '%s' cannot have a %s clause"),
+			f->level, cb_name (x), "OCCURS");
 	}
 
 	/* Validate OCCURS DEPENDING */
